--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "prettier/prettier": "error",
     "react/prop-types":"off",
     "no-unused-expressions":"off",
+    "@typescript-eslint/camelcase":"off",
     "@typescript-eslint/ban-types":"off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
